--- a/templates/data.html
+++ b/templates/data.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drukarnia- dane</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/start.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.png') }}">
 </head>
 
 <body>
     <header>
-        <h2>Bodyfit</h2>
-    </header>
+        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a> </header>
     <div id="main">
         <h2>Formularz zamówienia</h2>
         <span>Administratorem Twoich danych osobowych podanych w formularzu jest Robert Ruszkiewicz, prowadzący działalność gospodarczą pod firmą "Robert Ruszkiewicz”, ul. Jodłowa 14, 72-100 Goleniów, NIP: 8561766212. Szczegóły związane z przetwarzaniem danych osobowych znajdują się w polityce prywatności.</span>
