--- a/templates/products.html
+++ b/templates/products.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drukarnia- wybierz materiał</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.png') }}">
 </head>
 
 <body>
     <header>
-        <h2>Materiał</h2>
-    </header>
+        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a> </header>
     <div id="main">
         <h2>Materials</h2>
         <div id="list" class="materials-page">
             {% for i in materials %}
-            <a href='materials/{{i[0]}}'>
+            <a href='materials/{{i[0]}}' class="listItem">
                 <p><span class='desc'>{{i[1]}}</span><br><span>{{i[0]}}</span></p>
             </a>
             {% endfor %}
@@ -31,12 +31,25 @@
         <div>Dane</div>
     </div>
     <script>
+        var elementy = document.getElementsByClassName('listItem').length
+        window.onload = function() {
+            if (elementy == 1) {
+                document.getElementById('list').classList.add('list1')
+            } else if (elementy == 2) {
+                document.getElementById('list').classList.add('list2')
+            } else if (elementy == 3) {
+                document.getElementById('list').classList.add('list3')
+            } else if (elementy == 4) {
+                document.getElementById('list').classList.add('list4')
+            }
+        }
         var temp = document.getElementsByClassName('desc').length
         for (i = 0; i < temp; i++) {
             if (document.getElementsByClassName('desc')[i].innerHTML == "None") {
                 document.getElementsByClassName('desc')[i].innerHTML = ""
             }
         }
+
     </script>
 </body>
 
