--- a/static/css/common.css
+++ b/static/css/common.css
@@ -6,6 +6,10 @@ body {
     background-color: #F5F5F5;
 }
 
+header img{
+    width: 300px;
+}
+
 #main,
 #progressBar,
 #list {
@@ -40,9 +44,9 @@ body {
     color: #038775 !important;
 }
 
-a {
+#main a {
     width: 10vw;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     display: inline-block;
     background-color: white;
     color: black;
@@ -53,7 +57,7 @@ a {
     transition: .3s linear;
 }
 
-a:hover {
+#main a:hover {
     background-color: #e8e8e8;
     box-shadow: 9px 10px 19px -2px rgba(0, 0, 0, 0.7);
 }
@@ -88,4 +92,19 @@ a p {
     color: red;
     font-size: 24px;
     font-weight: bold;
+}
+
+.list1{
+    grid-template-columns: 100% !important;
+}
+.list2{
+    grid-template-columns: 50% 50% !important;
+
+}
+.list3{
+    grid-template-columns: 1/3 1/3 1/3 !important;
+
+}
+.list4{
+    grid-template-columns: 25% 25% 25% 25% !important;
 }
