--- a/templates/materials.html
+++ b/templates/materials.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.png') }}">
     <title>Drukarnia- wykończenie</title>
 </head>
 
 <body>
     <header>
-        <h2>Wykończenie</h2>
-    </header>
+        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a> </header>
     <div id="main">
         <div id="list">
             {% for i in methods %}
-            <a href='methods/{{i}}'>
+            <a href='methods/{{i}}' class="listItem">
                 <p><img src="/static/img/finishing/{{product}}_{{i}}.png" alt="{{i}}" class="finish"><span>{{i}}</span></p>
             </a>
             {% endfor %}
@@ -30,6 +30,18 @@
         <div>Dane</div>
     </div>
     <script>
+        var elementy = document.getElementsByClassName('listItem').length
+        window.onload = function() {
+            if (elementy == 1) {
+                document.getElementById('list').classList.add('list1')
+            } else if (elementy == 2) {
+                document.getElementById('list').classList.add('list2')
+            } else if (elementy == 3) {
+                document.getElementById('list').classList.add('list3')
+            } else if (elementy == 4) {
+                document.getElementById('list').classList.add('list4')
+            }
+        }
         var polskieZnaki = ['%C4%85', '%C4%87', '%C4%99', '%C5%82', '%C5%84', '%C3%B3', '%C5%9B', '%C5%BA', '%C5%BC']
         var uni = ['a', 'c', 'e', 'l', 'n', 'o', 's', 'z', 'z']
 
