--- a/templates/start.html
+++ b/templates/start.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drukarnia- wybierz produkt</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/start.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.png') }}">
 </head>
 
 <body>
     <header>
-        <h2>Bodyfit</h2>
+        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a>
     </header>
     <div id="main">
         <h3>Wybierz jaki produkt chcesz u nas wydrukować</h3>
         <div id="list">
             {% for i in produkty %}
-            <a href='products/{{i[0]}}'>
+            <a href='products/{{i[0]}}' class="listItem">
                 <p><img src="{{i[1]}}" alt="{{i[0]}}" class="startImg"><br><span>{{i[0]}}</span></p>
             </a>
             {% endfor %}
@@ -33,6 +33,18 @@
     </div>
 </body>
 <script>
+    var elementy = document.getElementsByClassName('listItem').length
+    window.onload = function() {
+        if (elementy == 1) {
+            document.getElementById('list').classList.add('list1')
+        } else if (elementy == 2) {
+            document.getElementById('list').classList.add('list2')
+        } else if (elementy == 3) {
+            document.getElementById('list').classList.add('list3')
+        } else if (elementy == 4) {
+            document.getElementById('list').classList.add('list4')
+        }
+    }
     var polskieZnaki = ['%C4%85', '%C4%87', '%C4%99', '%C5%82', '%C5%84', '%C3%B3', '%C5%9B', '%C5%BA', '%C5%BC']
     var uni = ['a', 'c', 'e', 'l', 'n', 'o', 's', 'z', 'z']
 
