--- a/templates/submit.html
+++ b/templates/submit.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drukarnia- podsumowanie</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/start.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.png') }}">
 </head>
 
 <body>
     <header>
-        <h2>Bodyfit</h2>
-    </header>
+        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a> </header>
     <div id="main">
         <h1>Dziękujemy, zgłoszenie zostało wysłane</h1>
     </div>
