--- a/static/css/common.css
+++ b/static/css/common.css
@@ -102,7 +102,7 @@ a p {
 
 }
 .list3{
-    grid-template-columns: 1/3 1/3 1/3 !important;
+    grid-template-columns: 33% 33% 33% !important;
 
 }
 .list4{
