--- a/templates/start.html
+++ b/templates/start.html
@@ -7,6 +7,8 @@
     <title>Drukarnia- wybierz produkt</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.png') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
