adminpanel lobby and beautify

--- a/templates/data.html
+++ b/templates/data.html
@@ -12,7 +12,8 @@
 
 <body>
     <header>
-        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a> </header>
+        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a>
+    </header>
     <div id="main">
         <h2>Formularz zamówienia</h2>
         <span>Administratorem Twoich danych osobowych podanych w formularzu jest Robert Ruszkiewicz, prowadzący działalność gospodarczą pod firmą "Robert Ruszkiewicz”, ul. Jodłowa 14, 72-100 Goleniów, NIP: 8561766212. Szczegóły związane z przetwarzaniem danych osobowych znajdują się w polityce prywatności.</span>
@@ -61,7 +62,6 @@
                 location.assign('submit/' + name + '!' + company + '!' + nip + '!' + city + '!' + code + '!' + street + '!' + newsletter + '!' + mail + '!' + tel)
             }
         }
-
     </script>
 </body>
 
