--- a/templates/products.html
+++ b/templates/products.html
@@ -12,7 +12,8 @@
 
 <body>
     <header>
-        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a> </header>
+        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a>
+    </header>
     <div id="main">
         <h2>Materials</h2>
         <div id="list" class="materials-page">
@@ -50,7 +51,6 @@
                 document.getElementsByClassName('desc')[i].innerHTML = ""
             }
         }
-
     </script>
 </body>
 
