--- a/templates/submit.html
+++ b/templates/submit.html
@@ -12,7 +12,8 @@
 
 <body>
     <header>
-        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a> </header>
+        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a>
+    </header>
     <div id="main">
         <h1>Dziękujemy, zgłoszenie zostało wysłane</h1>
     </div>
