--- a/templates/adminpanel.html
+++ b/templates/adminpanel.html
@@ -4,26 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drukarnia- wybierz produkt</title>
+    <title>Drukarnia- Panel admina</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/start.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.png') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <header>
-        <h2>Bodyfit</h2>
-    </header>
+        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a> </header>
     <div id="main">
-        <h3>Usuń produkt</h3>
+        <h3>Wybierz czym chcesz zarządzać</h3>
         <div id="list">
-            {% for i in produkty %}
-            <a href='products/{{i[]}}'>
-                <p><span>{{i}}</span></p>
+            <a href='adminproducts' class="listItem">
+                <p><span>Produkty</span></p>
             </a>
-            {% endfor %}
+            <a href='admincodes' class="listItem">
+                <p><span>Kody rabatowe</span></p>
+            </a>
+            <a href='adminpassword' class="listItem">
+                <p><span>Hasło</span></p>
+            </a>
         </div>
-        <a href="/addproduct"><button>Dodaj produkt</button></a>
     </div>
+    <script>
+    var elementy = document.getElementsByClassName('listItem').length
+        window.onload = function() {
+            if (elementy == 1) {
+                document.getElementById('list').classList.add('list1')
+            } else if (elementy == 2) {
+                document.getElementById('list').classList.add('list2')
+            } else if (elementy == 3) {
+                document.getElementById('list').classList.add('list3')
+            } else if (elementy == 4) {
+                document.getElementById('list').classList.add('list4')
+            }
+        }
+    </script>
 
 </body>
 
