--- a/templates/file.html
+++ b/templates/file.html
@@ -12,10 +12,11 @@
 
 <body>
     <header>
-<a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a>    </header>
+        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a>
+    </header>
     <div id="main">
-        <form action="data/" method ="post" enctype="multipart/form-data">
-            
+        <form action="data/" method="post" enctype="multipart/form-data">
+
             <h3>Dołącz plik który mamy wydrukować</h3>
             <input id="plik" type="file" placeholder="Dodaj załącznik" name="img" accept=".jpg,.jpeg,.png,.pdf">
             <h5>Przyjmujemy pliki JPG, PNG, oraz PDF</h5>
@@ -27,7 +28,7 @@
             <br>
             <input id="project" type="checkbox" name="projekt">chcę, byście wykonali za mnie projekt (dodatkowo 200PLN)
             <br>
-            <button type="submit" >Dalej</button>
+            <button type="submit">Dalej</button>
         </form>
     </div>
     <div id="progressBar">
@@ -70,7 +71,6 @@
                 }
             }
         }
-
     </script>
 </body>
 
