--- a/templates/addproductstart.html
+++ b/templates/addproductstart.html
@@ -20,7 +20,8 @@
             <h4>Nazwa</h4>
             <input type="text" placeholder="Wpisz nazwę" name="nazwa" required>
             <h4>Dodaj zdjęcie produktu</h4>
-            <input type="file" placeholder="Dodaj załącznik" name="img" accept=".jpg,.jpeg,.png,.pdf" required>
+            <h5 style="color: red">Uwaga, panel przyjmuje tylko zdjęcia w formacie png z racji przezroczystego tła.<br> Zdjęcia dodane w innym formacie mogą się nie wyświetlać</h5>
+            <input type="file" placeholder="Dodaj załącznik" name="img" accept=".png" required>
             <br><br><br>
             <button type="submit">Dodaj</button>
         </form>
