--- a/templates/delsuccess.html
+++ b/templates/delsuccess.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dodaj produkt- Panel admina</title>
+    <title>Usuń- Panel admina</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.png') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
         <a href="/adminpanel"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a>
     </header>
     <div id="main">
-        <h2>Produkt dodany</h2>        
+        <h2>Produkt Usunięty</h2>        
     </div>
 
 </body>
