--- a/templates/addmethods.html
+++ b/templates/addmethods.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a>
+        <a href="/adminpanel"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo"></a>
     </header>
     <div id="main">
         <h3>Dodaj  Wykończenia</h3>
