--- a/templates/adminpanel.html
+++ b/templates/adminpanel.html
@@ -20,6 +20,9 @@
             <a href='adminproduct' class="listItem">
                 <p><span>Produkty</span></p>
             </a>
+            <a href='adminmail' class="listItem">
+                <p><span>Ustawienia mail</span></p>
+            </a>
             <a href='kodyadmin' class="listItem">
                 <p><span>Kody rabatowe</span></p>
             </a>
