--- a/templates/start.html
+++ b/templates/start.html
@@ -33,8 +33,15 @@
         <div>Plik</div>
         <div>Dane</div>
     </div>
+    <div id="cookiesPopUp">
+        <p>Pliki Cookies</p>
+        <p>Ta strona korzysta z ciasteczek, aby świadczyć usługi na najwyższym poziomie. Dalsze korzystanie ze strony jest równoznaczne z tym, że zgadzasz się na ich użycie- pliki te będą zapisywane na urządzeniu końcowym</p>
+        <button onclick="closeCookies()">Ok, rozumiem</button>
+    </div>
+    
 </body>
 <script>
+
     var elementy = document.getElementsByClassName('listItem').length
     window.onload = function() {
         if (elementy == 1) {
@@ -49,7 +56,11 @@
     }
     var polskieZnaki = ['%C4%85', '%C4%87', '%C4%99', '%C5%82', '%C5%84', '%C3%B3', '%C5%9B', '%C5%BA', '%C5%BC']
     var uni = ['a', 'c', 'e', 'l', 'n', 'o', 's', 'z', 'z']
-
+    
+    function closeCookies(){
+        document.getElementById('cookiesPopUp').style.display = 'none';
+    }
+    
     function imageExists(image_url) {
         var http = new XMLHttpRequest();
         http.open('HEAD', image_url, false);
@@ -73,6 +84,7 @@
             zdjecia[i].style = "display:none"
         }
     }
+
 </script>
 
 </html>
