--- a/templates/delproduct.html
+++ b/templates/delproduct.html
@@ -41,10 +41,13 @@
             document.getElementById('list').classList.add('list1')
         } else if (elementy == 2) {
             document.getElementById('list').classList.add('list2')
+            document.getElementById('listContainer').style.maxWidth = '400px'
         } else if (elementy == 3) {
             document.getElementById('list').classList.add('list3')
+            document.getElementById('listContainer').style.maxWidth = '600px'
         } else if (elementy == 4) {
             document.getElementById('list').classList.add('list4')
+            document.getElementById('listContainer').style.maxWidth = '800px'
         }
     }
 </script>
