--- a/templates/products.html
+++ b/templates/products.html
@@ -16,12 +16,14 @@
     </header>
     <div id="main">
         <h2>Materials</h2>
+        <div id="listContainer">
         <div id="list" class="materials-page">
             {% for i in materials %}
             <a href='materials/{{i[0]}}' class="listItem">
                 <p><span class='desc'>{{i[1]}}</span><br><span>{{i[0]}}</span></p>
             </a>
             {% endfor %}
+        </div>
         </div>
     </div>
     <div id="progressBar">
@@ -35,16 +37,19 @@
     <script>
         var elementy = document.getElementsByClassName('listItem').length
         window.onload = function() {
-            if (elementy == 1) {
-                document.getElementById('list').classList.add('list1')
-            } else if (elementy == 2) {
-                document.getElementById('list').classList.add('list2')
-            } else if (elementy == 3) {
-                document.getElementById('list').classList.add('list3')
-            } else if (elementy == 4) {
-                document.getElementById('list').classList.add('list4')
-            }
+        if (elementy == 1) {
+            document.getElementById('list').classList.add('list1')
+        } else if (elementy == 2) {
+            document.getElementById('list').classList.add('list2')
+            document.getElementById('listContainer').style.maxWidth = '400px'
+        } else if (elementy == 3) {
+            document.getElementById('list').classList.add('list3')
+            document.getElementById('listContainer').style.maxWidth = '600px'
+        } else if (elementy == 4) {
+            document.getElementById('list').classList.add('list4')
+            document.getElementById('listContainer').style.maxWidth = '800px'
         }
+    }
         var temp = document.getElementsByClassName('desc').length
         for (i = 0; i < temp; i++) {
             if (document.getElementsByClassName('desc')[i].innerHTML == "None") {
