--- a/templates/start.html
+++ b/templates/start.html
@@ -17,12 +17,14 @@
     </header>
     <div id="main">
         <h3>Wybierz jaki produkt chcesz u nas wydrukować</h3>
+        <div id="listContainer">
         <div id="list">
             {% for i in produkty %}
             <a href='products/{{i[0]}}' class="listItem">
                 <p><img src="{{i[1]}}" alt="{{i[0]}}" class="startImg"><br><span>{{i[0]}}</span></p>
             </a>
             {% endfor %}
+        </div>
         </div>
     </div>
     <div id="progressBar">
@@ -48,10 +50,13 @@
             document.getElementById('list').classList.add('list1')
         } else if (elementy == 2) {
             document.getElementById('list').classList.add('list2')
+            document.getElementById('listContainer').style.maxWidth = '400px'
         } else if (elementy == 3) {
             document.getElementById('list').classList.add('list3')
+            document.getElementById('listContainer').style.maxWidth = '600px'
         } else if (elementy == 4) {
             document.getElementById('list').classList.add('list4')
+            document.getElementById('listContainer').style.maxWidth = '800px'
         }
     }
     var polskieZnaki = ['%C4%85', '%C4%87', '%C4%99', '%C5%82', '%C5%84', '%C3%B3', '%C5%9B', '%C5%BA', '%C5%BC']
