--- a/templates/products.html
+++ b/templates/products.html
@@ -20,7 +20,7 @@
         <div id="list" class="materials-page">
             {% for i in materials %}
             <a href='materials/{{i[0]}}' class="listItem">
-                <p><span class='desc'>{{i[1]}}</span><br><span>{{i[0]}}</span></p>
+                <p><span>{{i[0]}}</span><br><span class='desc'>{{i[1]}}</span></p>
             </a>
             {% endfor %}
         </div>
