--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1,33 +1,45 @@
-@media all and (max-width: 992px){
-    #progressBar{
+@media all and (max-width: 992px) {
+    #progressBar {
         display: none !important;
     }
-    #main a{
+
+    #main a {
         width: 80vw;
     }
+
     #list {
-    display: grid;
-    grid-template-columns: 100% !important;
+        display: grid;
+        grid-template-columns: 100% !important;
+    }
 }
-}
-@media all and (min-width: 992px){
-    #main a{
+
+@media all and (min-width: 992px) {
+    #main a {
         width: 10vw;
     }
-    .listItem{
+
+    .listItem {
         max-width: 130px;
     }
-    #listContainer{
+
+    #listContainer {
         width: 100vw;
         max-width: 1000px;
         position: relative;
         margin: 0 auto;
     }
+
     #list {
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20% 20%;
+    }
+    #textContainer{
+        max-width: 650px;
+        position: relative;
+        margin: 20px auto;
+    }
 }
-}
+
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -36,7 +48,7 @@ body {
     background-color: #F5F5F5;
 }
 
-header img{
+header img {
     width: 300px;
 }
 
@@ -111,28 +123,33 @@ a p {
 .materials-page a {
     min-height: calc(13vw + 20px) !important;
 }
-.alert{
+
+.alert {
     padding: 20px 20px;
     color: red;
     font-size: 24px;
     font-weight: bold;
 }
 
-.list1{
+.list1 {
     grid-template-columns: 100% !important;
 }
-.list2{
+
+.list2 {
     grid-template-columns: 50% 50% !important;
 
 }
-.list3{
+
+.list3 {
     grid-template-columns: 33% 33% 33% !important;
 
 }
-.list4{
+
+.list4 {
     grid-template-columns: 25% 25% 25% 25% !important;
 }
-#cookiesPopUp{
+
+#cookiesPopUp {
     background-color: #464646;
     color: white;
     padding: 20px;
@@ -141,14 +158,16 @@ a p {
     right: 40px;
     bottom: 95px;
 }
-#cookiesPopUp>p:first-of-type{
+
+#cookiesPopUp > p:first-of-type {
     font-size: 20px;
 }
-#cookiesPopUp>button{
+
+#cookiesPopUp > button {
     background-color: black;
     color: white;
     border: none;
-    font-size:16px;
+    font-size: 16px;
     padding: 5px;
     cursor: pointer;
 }
